welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:68: error: expected start of definition
override def run() {
         ^MethodsPicture:72: error: Unmatched closing brace '}' ignored here
}
^